coffeeshop-nodeport-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: coffeeshop-backend
  ports:
    - protocol: TCP
      port: 9090 # The service is exposed on port 9090
      targetPort: 9090 # Traffic is forwarded to port 8080 on the container
  type: NodePort
---
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: coffeeshop-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
  type: NodePort
---
